Fixed padding-top on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,10 @@ html body {
     > :first-child {
         margin-top: 0;
         padding-top: 35px;
+
+        @media (max-width: 700px) {
+            padding-top: 65px;
+        }
     }
 }
 
@@ -57,7 +61,7 @@ nav {
 
     #header {
         display: block;
-        padding: 15px 0;
+        padding: 10px 0;
         font-size: 1.4em;
         font-weight: bold;
         text-align: center;
